umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_isisdraw_09.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 19
sum_formula: C11NO4S2
graph6: "QR`@AA?_AC@??@??_?O?@??O??W"
