umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_jmol_bignou01.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 19
bond_count: 24
sum_formula: C12CoN6
graph6: "RiaCCA?G_`@?A?@??__C??O_@?O@A?"
